# QuexPipe

./: .editorconfig  .gitignore  README.md  RELEASENOTES.md  lexer_manager.cpp  lexer_manager.h  main.cpp  quexpipe.pro
dev-tool/: CHANGELOG  Makefile  charfuncs.h  debcontrol  implementation_copy_single.h  install.sh  pseudo_main.cpp  quexpipeitem.h  uninstall.sh  xml.h
dev-tool/include/quexpipe/: charfuncs.h  implementation_copy_queue.h  implementation_copy_single.h  implementation_point_queue.h  implementation_point_single.h  quexpipeitem.h  xml.h
src/: CHANGELOG  CMakeLists.txt  Makefile  QuexPipeConfig.hpp.in  debcontrol  header.h  lexer_manager.cpp  lexer_manager.h  main.cpp
src/CommonHeaders/: CMakeLists.txt  ilexer.hpp  interfaces.hpp  itextsource.h  quexpipe.hpp  quexpipe_c_api.h  types.hpp
src/Main/: CMakeLists.txt  optionparser.cpp  optionparser.hpp  qp_options.cpp  qp_options.hpp
